both add and remove borrower buttons are now combined with their related form, able to click out of the popup and fixed css overflow

--- a/src/renderer/css/popupform.css
+++ b/src/renderer/css/popupform.css
@@ -1,13 +1,10 @@
 form {
-    display: none;
-    position: fixed;
     background-color: white;
     justify-content: center;
     width: 45vw;
-    height: 30vw;
     border: 3px solid black;
     padding: 3%;
-    transform: translate(15%, -15%);
+    color: black
 }
 
 form > label {
